Fix overlap cookiescript logo with nau footer logo
GN-922

--- a/edx-platform/nau-basic/lms/static/sass/partials/lms/theme/_footer.scss
+++ b/edx-platform/nau-basic/lms/static/sass/partials/lms/theme/_footer.scss
@@ -5,7 +5,7 @@ footer {
     }
 
     #quick-links-section {
-        padding: 50px 65px 30px;
+        padding: 50px 60px 30px;
         background-color: $footer-bg-color;
         display: flex;
 
@@ -143,7 +143,7 @@ footer {
         background-color: white;
         padding-top: 0px;
         padding-right: 50px;
-        padding-bottom: 25px;
+        padding-bottom: 60px;
         padding-left: 50px;    
         border-radius: 0px 0px 10px 10px;
 
